[gd_scene load_steps=6 format=3 uid="uid://xgl783xyn1c0"]

[ext_resource type="Script" uid="uid://b861pkv8fvbxq" path="res://scripts/level.gd" id="1_mx8sn"]
[ext_resource type="PackedScene" uid="uid://dw3dl3w20jerv" path="res://scenes/player.tscn" id="1_w7c3h"]
[ext_resource type="PackedScene" uid="uid://i8kxqxd1vr4a" path="res://scenes/hud.tscn" id="2_w8frs"]
[ext_resource type="Script" uid="uid://bnjugbeilnyud" path="res://scripts/mob_spawning.gd" id="3_w8frs"]

[sub_resource type="Curve2D" id="Curve2D_mx8sn"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 704, -64, 0, 0, 0, 0, 704, 424, 0, 0, 0, 0, -64, 424, 0, 0, 0, 0, -64, -64, 0, 0, 0, 0, 704, -64)
}
point_count = 5

[node name="Level" type="Node2D"]
script = ExtResource("1_mx8sn")

[node name="Player" parent="." instance=ExtResource("1_w7c3h")]
position = Vector2(320, 180)

[node name="PlayerCamera" type="Camera2D" parent="." groups=["player_follow_camera"]]
position = Vector2(320, 180)

[node name="HUD" parent="PlayerCamera" instance=ExtResource("2_w8frs")]
anchors_preset = -1
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0

[node name="SpawningPath" type="Path2D" parent="PlayerCamera"]
position = Vector2(-320, -180)
curve = SubResource("Curve2D_mx8sn")
script = ExtResource("3_w8frs")

[node name="SpawnLocation" type="PathFollow2D" parent="PlayerCamera/SpawningPath"]
position = Vector2(704, -64)
rotation = 1.5708

[node name="Timer" type="Timer" parent="PlayerCamera/SpawningPath"]
autostart = true

[node name="LuckRerollTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="luck_value_changed" from="." to="." method="_on_luck_value_changed"]
[connection signal="timeout" from="PlayerCamera/SpawningPath/Timer" to="PlayerCamera/SpawningPath" method="_on_timer_timeout"]
[connection signal="timeout" from="LuckRerollTimer" to="." method="_on_luck_reroll_timer_timeout"]
